# mind-scout

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  BACKLOG.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_GCP.md  Dockerfile  GCP_QUICKSTART.md  Makefile  PROJECT_PLAN.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  STATUS.md  STRUCTURE.md  TESTING.md  alembic.ini  cloudbuild.yaml  coverage.xml  docker-compose.yml  migrate_db_phase2.py  migrate_db_phase3.py  migrate_db_phase4.py  pyproject.toml  requirements.txt  test_fetch.py
.claude/: instructions.md  instructions.md.bak
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: main.py
backend/api/: __init__.py  articles.py  fetchers.py  notifications.py  profile.py  recommendations.py  search.py  subscriptions.py
backend/scheduler/: __init__.py  jobs.py  scheduler.py
docs/: ORGANIZATION.md  README.md  project-plan.md
docs/architecture/: README.md  diagrams.md  maintenance.md  overview.md
docs/archive/: DEMO_PHASE2.md  DOCS_INDEX.md  README.md
docs/development/: status.md  structure.md
docs/plans/: microservices-migration.md  phoenix.md  rss-recommendation-integration.md
frontend/: FRONTEND_README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json
frontend/src/: App.jsx  setupTests.js
frontend/src/__tests__/: App.test.jsx  Articles.test.jsx  Profile.test.jsx
frontend/src/pages/: Articles.jsx  Notifications.jsx  Profile.jsx  Recommendations.jsx  Search.jsx  Subscriptions.jsx
mcp-server/: FETCH_TOOL.md  README.md  TROUBLESHOOTING.md  pyproject.toml  server.py
migrations/: README.md  cli_old.py
mindscout/: CLI_RATE_LIMIT_GUIDE.md  __init__.py  cli.py  config.py  database.py  evaluation.py  observability.py  profile.py  recommender.py  research_planner.py  vectorstore.py
mindscout/fetchers/: __init__.py  arxiv.py  arxiv_advanced.py  base.py  rss.py  semanticscholar.py
mindscout/processors/: __init__.py  content.py  llm.py
scripts/: check_architecture_docs.sh  check_architecture_docs.sh.bak  deploy_gcp.sh  init-test-db.sql  reorganize_project.sh  setup_git_hooks.sh  test_fetch.py
tests/: README.md  conftest.py  script_process.py  test_api_articles.py  test_api_notifications.py  test_api_profile.py  test_api_recommendations.py  test_api_search.py  test_api_subscriptions.py  test_content_processor.py  test_evaluation.py  test_llm_processor.py  test_mcp_server.py  test_observability.py  test_process.py  test_recommender.py  test_research_planner.py  test_rss_fetcher.py  test_scheduler.py  test_vectorstore.py
