[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindscout"
version = "0.6.0"
description = "An AI assistant that helps you stay on top of advances in AI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Kate"}
]
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "anthropic>=0.40.0",
    "numpy>=1.24.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mindscout = "mindscout.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
